# oresmen

./: .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  meta.yaml  noxfile.py  package.json  pixi.toml  pyproject.toml  recipe.yaml  requirements-dev.txt  setup.cfg  setup.py  tox.ini  tox.toml
.github/workflows/: ci-cd.yml  jekyll-gh-pages.yml  lint.yml  python-package.yml  python-publish.yml  python_ci.yml  static.yml  workflow.yml
docs/: conf.py  index.rst
oresmen/: __init__.py  _version.py  oresmen.py
recipe/: meta.yaml
src/oresmen/: __init__.py  _version.py  main.py  oresmen.py
tests/: test_adnus.py
