[tool.poetry]
name = "oresmen"
version = "0.1.2"
description = "A module for generating Oresme numbers (harmonic series partial sums)"
authors = ["Mehmet Keçeci <mkececi@yaani.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.3"

[tool.poetry.group.build.dependencies]
setuptools = "^80.9.0"
cython = "^3.2.3"

[build-system]
requires = ["poetry-core", "cython", "setuptools>=77.0"]
build-backend = "poetry.core.masonry.api"
